# OpenGate

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  GETTING_STARTED.md  GOVERNANCE.md  LICENSE  QUICK_REFERENCE.md  README.md  audit.md
.github/: FUNDING.yml
PROOF_GUIDES/: PROOF_GUIDE_1.md  PROOF_GUIDE_2.md  PROOF_GUIDE_3.md
gate-cicd/: Dockerfile  README.md
gate-cicd/github-workflows/: ci.yml
gate-core/: README.md
gate-core/fw/: gate.c  gate.h  linker.ld
gate-core/proofs/: ComposeBudget.v  Makefile  gate_entropy.v
gate-core/rtl/: Makefile  open_gate.sv  tb_open_gate.sv
gate-docs/: 512_CERTIFICATE_FORMAT.md  ARCHITECTURE.md  README.md  THEORY.md  THREAT_MODEL.md  quickstart.md
gate-docs/schemas/: cert.schema.json  entropy-log.schema.json  side-channel.schema.json
gate-libs/: README.md
gate-libs/c/: open_gate.h
gate-libs/python/: setup.py
gate-libs/python/open_gate/: __init__.py
gate-libs/rust/: Cargo.toml
gate-policies/: README.md  rollback-policy.md  vote-example.json
gate-sw/: README.md  og-entropy.py  og-pack.py  og-validate.py
gate-tests/: README.md
gate-tests/hw/: test_gate.py
